# diploma_backend

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  pytest.ini
docs/: wallet_payment.md
src/: manage.py
src/ai/: README.md  apps.py  ml_models.py  models.py  urls.py  utils.py  views.py
src/contacts/: admin.py  models.py  serializers.py  urls.py  views.py
src/diploma_smart_parking/: asgi.py  settings.py  urls.py  wsgi.py
src/docs/: frontend_instructions.md  header_instructions.md  timezone_handling.md
src/models/: parking_model_17b6bfc4-6596-4b29-ab53-3f29409be9d6.joblib  parking_model_28b5546d-f1fc-4a76-87f7-00d43f53786c.joblib  parking_model_34637c98-7728-48b6-904e-87979f4c2de4.joblib  parking_model_368fef92-3a77-437b-af5a-2b87763e9543.joblib  parking_model_3c1af55f-4983-406e-a861-1565f6df0512.joblib  parking_model_517aeeb5-1b70-4cc7-942c-4c67bd864a28.joblib  parking_model_6bdb3841-8a34-46c9-bd89-8285d707f5e9.joblib  parking_model_b54acec3-0503-4404-b12a-e3b431d617d8.joblib  parking_model_eec3a612-c27d-46d0-9b9c-65d2ef46b71a.joblib  parking_model_f1aa283b-6c19-4dc4-826a-12f4095ee51d.joblib  parking_scaler_f1aa283b-6c19-4dc4-826a-12f4095ee51d.joblib
src/notifications/: admin.py  (+1 more)
tests/: README.md  README_sensor_api.md  conftest.py  test_init_load_data.py  test_parking_available_windows.py  test_parking_models.py  test_parking_reservation.py  test_parking_serializers.py  test_parking_tariff_integration.py  test_reservation_payment.py  test_sensor_api.py  test_user_authentication.py  test_user_profile.py  test_user_registration.py
(+48 files in other folders)
