[project]
name = "diploma-smart-parking"
version = "0.1.0"
description = ""
authors = [
    {name = "Tamerlan-hash",email = "dzhurunovt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "diploma_smart_parking", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
